--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -40,7 +40,7 @@ background: transparent;  border: none;  color: #E1FFFFFF;
 
 }
 
-QLabel{ color: #FFFFFF; font-family: 'Roboto'; }
+QLabel{ color: #FFFFFF; font-family: 'Roboto'; font-size: 11pt;}
 
 QGroupBox
 {
@@ -102,8 +102,9 @@ QGroupBox::title
       <property name="styleSheet">
        <string notr="true">QFrame#frame{
 background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(50, 61, 27, 255), stop:1 rgba(78, 154, 6, 255));
-border: 2px solid qlineargradient(spread:pad, x1:0.0149254, y1:0.505727, x2:1, y2:0.364, stop:0 rgba(252, 233, 79, 255), stop:1 rgba(252, 233, 79, 157));
-}</string>
+}
+
+//border: 2px solid qlineargradient(spread:pad, x1:0.0149254, y1:0.505727, x2:1, y2:0.364, stop:0 rgba(252, 233, 79, 255), stop:1 rgba(252, 233, 79, 157));</string>
       </property>
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
@@ -160,13 +161,13 @@ border: 2px solid qlineargradient(spread:pad, x1:0.0149254, y1:0.505727, x2:1, y
             <property name="minimumSize">
              <size>
               <width>60</width>
-              <height>50</height>
+              <height>60</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
               <width>60</width>
-              <height>50</height>
+              <height>60</height>
              </size>
             </property>
             <property name="text">
@@ -191,7 +192,7 @@ border: 2px solid qlineargradient(spread:pad, x1:0.0149254, y1:0.505727, x2:1, y
            </widget>
           </item>
           <item row="1" column="4" alignment="Qt::AlignHCenter|Qt::AlignVCenter">
-           <widget class="QLabel" name="label_6">
+           <widget class="QLabel" name="currTimeLab">
             <property name="styleSheet">
              <string notr="true"/>
             </property>
@@ -201,7 +202,7 @@ border: 2px solid qlineargradient(spread:pad, x1:0.0149254, y1:0.505727, x2:1, y
            </widget>
           </item>
           <item row="0" column="4" alignment="Qt::AlignHCenter|Qt::AlignVCenter">
-           <widget class="QLabel" name="label_4">
+           <widget class="QLabel" name="currDateLab">
             <property name="styleSheet">
              <string notr="true"/>
             </property>
@@ -329,14 +330,14 @@ border: 2px solid qlineargradient(spread:pad, x1:0.0149254, y1:0.505727, x2:1, y
              <item row="3" column="0">
               <widget class="QLabel" name="label_26">
                <property name="text">
-                <string>Instructor:</string>
+                <string>&lt;b&gt;Instructor:</string>
                </property>
               </widget>
              </item>
              <item row="5" column="0" alignment="Qt::AlignHCenter">
               <widget class="QLabel" name="label_21">
                <property name="text">
-                <string>Start</string>
+                <string>&lt;b&gt;Start</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignCenter</set>
@@ -353,14 +354,14 @@ border: 2px solid qlineargradient(spread:pad, x1:0.0149254, y1:0.505727, x2:1, y
              <item row="0" column="0">
               <widget class="QLabel" name="label_14">
                <property name="text">
-                <string>Class number:</string>
+                <string>&lt;b&gt;Class number:</string>
                </property>
               </widget>
              </item>
              <item row="5" column="2" alignment="Qt::AlignHCenter">
               <widget class="QLabel" name="label_23">
                <property name="text">
-                <string>Timer</string>
+                <string>&lt;b&gt;Timer</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignCenter</set>
@@ -387,7 +388,7 @@ border: 2px solid qlineargradient(spread:pad, x1:0.0149254, y1:0.505727, x2:1, y
              <item row="1" column="0">
               <widget class="QLabel" name="label_16">
                <property name="text">
-                <string>Course title:</string>
+                <string>&lt;b&gt;Course title:</string>
                </property>
               </widget>
              </item>
@@ -401,7 +402,7 @@ border: 2px solid qlineargradient(spread:pad, x1:0.0149254, y1:0.505727, x2:1, y
              <item row="5" column="1" alignment="Qt::AlignHCenter">
               <widget class="QLabel" name="label_22">
                <property name="text">
-                <string>End</string>
+                <string>&lt;b&gt;End</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignCenter</set>
@@ -411,7 +412,7 @@ border: 2px solid qlineargradient(spread:pad, x1:0.0149254, y1:0.505727, x2:1, y
              <item row="2" column="0">
               <widget class="QLabel" name="label_18">
                <property name="text">
-                <string>Course code:</string>
+                <string>&lt;b&gt;Course code:</string>
                </property>
               </widget>
              </item>
@@ -541,7 +542,7 @@ border: 2px solid qlineargradient(spread:pad, x1:0.0149254, y1:0.505727, x2:1, y
              <item row="1" column="0">
               <widget class="QLabel" name="label_11">
                <property name="text">
-                <string>Name:</string>
+                <string>&lt;b&gt;Name:</string>
                </property>
               </widget>
              </item>
@@ -555,7 +556,7 @@ border: 2px solid qlineargradient(spread:pad, x1:0.0149254, y1:0.505727, x2:1, y
              <item row="2" column="0">
               <widget class="QLabel" name="label_12">
                <property name="text">
-                <string>ID:</string>
+                <string>&lt;b&gt;ID:</string>
                </property>
               </widget>
              </item>
@@ -569,14 +570,14 @@ border: 2px solid qlineargradient(spread:pad, x1:0.0149254, y1:0.505727, x2:1, y
              <item row="3" column="0">
               <widget class="QLabel" name="label_13">
                <property name="text">
-                <string>Level:</string>
+                <string>&lt;b&gt;Status:</string>
                </property>
               </widget>
              </item>
              <item row="3" column="1" colspan="3">
-              <widget class="QLabel" name="label_10">
+              <widget class="QLabel" name="IdStatus">
                <property name="text">
-                <string>IdLevel</string>
+                <string/>
                </property>
               </widget>
              </item>
@@ -592,20 +593,19 @@ border: 2px solid qlineargradient(spread:pad, x1:0.0149254, y1:0.505727, x2:1, y
              </sizepolicy>
             </property>
             <property name="title">
-             <string>Notice Board</string>
+             <string>Message Box</string>
             </property>
             <layout class="QGridLayout" name="gridLayout_6">
              <item row="0" column="0">
               <widget class="QTextEdit" name="MessageBox">
                <property name="styleSheet">
-                <string notr="true">QTextEdit{background: transparent; color: blue;}</string>
+                <string notr="true">QTextEdit{background: transparent; color: white; font-size: 16px;}</string>
                </property>
                <property name="html">
                 <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'FreeSerif Italic'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'FreeSerif Italic'; font-size:16px; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                </property>
               </widget>
@@ -640,7 +640,7 @@ p, li { white-space: pre-wrap; }
           <item row="0" column="0" alignment="Qt::AlignHCenter|Qt::AlignVCenter">
            <widget class="QLabel" name="label_5">
             <property name="styleSheet">
-             <string notr="true">font-size: 9pt;</string>
+             <string notr="true">font-size: 11pt;</string>
             </property>
             <property name="text">
              <string>Osun State University Osogbo @2020</string>
